# justralph.it

./: .gitignore  AGENTS.md  FEATURES.md  PROMPT.xml  README.md  main.py  opencode.jsonc  pyproject.toml  ralph.py  ralph_template.py  requirements.txt  setup.sh  skills-lock.json  tasks.yaml  test_secret_file.py
.beads/: issues.jsonl  metadata.json
.beads/dolt.20260315T023530Z.corrupt.backup/: config.yaml
.beads/hooks/: post-merge  pre-commit
.claude/agents/: agent_creator.md  agent_subprocess.md  agent_updater.md  bd_issue_architect.md  bd_wrapper.md  chatbot_engine.md  client_developer.md  config_init.md  dependency_manager.md  docs_maintainer.md  error_handler.md  git_operations.md  integration_tester.md  loop_orchestrator.md  observability_engineer.md  (+12 more)
.ralph/: .gitignore  hooks.py
.ralphy/: .gitignore  config.yaml  hooks.py  rules.txt
app/: AGENTS.md  __init__.py  auth.py  compaction.py  github.py  models.py  projects.py  push.py  recovery.py  routes.py  sse.py  subprocess_env.py
client/: README.md  bun-env.d.ts  package.json
scripts/: AGENTS.md  pre-commit-security.sh
server/: auth.py  chatbot.py  db.py  main.py  sessions.py
tests/: conftest.py  test_app.py  test_auth.py  test_centering.py  test_chat.py  test_compaction.py  test_e2e_project_creation.py  test_hsts.py  test_integration.py  test_issues_tab.py  test_pre_commit_hook.py  test_project_delete.py  test_project_page.py  test_projects.py  test_projects_list.py  test_push_notifications.py  test_ralph.py  test_ralph_claim.py  test_ralph_force_stop.py  test_ralph_iteration_logs.py  test_ralph_launch.py  test_ralph_logging.py  test_ralph_single_issue.py  test_ralph_stop.py  test_ralph_template.py  test_ralphy_prompt.py  test_recovery.py  test_session_expiration.py  test_spec_tab.py  test_subprocess_env.py  test_terminal_tab.py  test_theme.py
(+173 files in other folders)
