[project]
name = "just-ralph-it"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["ralph.py", "venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end browser tests (require running app)",
]
