[project]
name = "justralph-it"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bd",
    "ralph",
]

[tool.ty.environment]
python = ".venv"

[tool.uv.workspace]
members = [
    "pkgs/bd",
    "pkgs/ralph",
]

[tool.uv.sources]
ralph = { workspace = true }
bd = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
