[project]
name = "justralph-it"
version = "0.1.0"
description = "AI-powered project builder: chatbot extracts requirements, autonomous agent writes code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tasks",
    "fastapi[standard]>=0.135.1",
    "ralph",
]

[tool.ty.environment]
python = ".venv"

[tool.uv.workspace]
members = [
    "pkgs/tasks",
    "pkgs/ralph",
]

[tool.uv.sources]
ralph = { workspace = true }
tasks = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "ty>=0.0.23",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
